# go2_ros2

./: .gitignore  README.md  requirements.txt  woojin_path.py
docker/: Dockerfile  Dockerfile.back  docker-compose.yml  entrypoint.sh
docker/workspace/: helalsdlawd
go2_humble/go2_robot_sdk/launch/: navigation.launch.py  robot_mapping.launch.py
go2_robot_sdk/: package.xml
go2_robot_sdk/config/: nav2_params.yaml  nav2_params_map1.yaml  nav2_params_map4.yaml  test.yaml
go2_robot_sdk/launch/: example.launch.py  robot_map1.launch.py  robot_map2.launch.py  robot_map3.launch.py  robot_map4.launch.py  robot_mapping.launch.py  test.launch.py
lidar_processor_cpp/: CMakeLists.txt  package.xml
lidar_processor_cpp/src/: lidar_to_pointcloud_node.cpp
mission_controller/: package.xml  setup.py
mission_controller/mission_controller/: mission_controller.py  mission_controller2.py  mission_controller_backup.py  straight_move.py
path_tracker/: CMakeLists.txt  package.xml
path_tracker/launch/: path_publisher.launch.py  path_tracker_complete.launch.py  track_1_2.launch.py  track_fast.launch.py  tracker.launch.py
path_tracker/path/: path_1.csv  path_2.csv  path_3_1.csv  path_3_1.csv.bak.nouse  path_3_1_modified_1.csv  path_3_1_modified_2.csv  path_3_1_modified_3.csv  path_3_1_modified_4.csv  path_3_2.csv  path_3_3.csv  path_4_1.csv  path_4_1_10.csv  path_4_1_5.csv  path_4_1_original.csv  path_4_2.csv
path_tracker/src/: path_publisher_node.cpp  path_publisher_node_sehun.cpp  path_topic_publisher.cpp  path_topic_publisher2.cpp  pid_path_tracker_node.cpp  tf_to_pose_publisher_node.cpp
