cmake_minimum_required(VERSION 3.8)
project(lidar_processor_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(PCL REQUIRED COMPONENTS io filters)
find_package(pcl_conversions REQUIRED)

add_executable(lidar_to_pointcloud_node src/lidar_to_pointcloud_node.cpp)
ament_target_dependencies(lidar_to_pointcloud_node rclcpp sensor_msgs pcl_conversions)
target_include_directories(lidar_to_pointcloud_node PRIVATE ${PCL_INCLUDE_DIRS})
target_link_libraries(lidar_to_pointcloud_node ${PCL_LIBRARIES})

install(TARGETS lidar_to_pointcloud_node
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
